@@ -2076,8 +2076,8 @@ INSERT INTO APPLICANT VALUES('ProgrammerApplicant','ff8080823dee26af013dee299826
 INSERT INTO SKILL VALUES('ProgrammingSkill','ff8080823dee26af013dee28d7d70000','PROGRAMMING','JAVA')
 INSERT INTO FILE VALUES('ff8080823dfda532013dfda5f7140000','THE BIG FILE',NULL)
 INSERT INTO FILE VALUES('ff8080823dfda532013dfda610960001','EL GRAN ARCHIVO',NULL)
-INSERT INTO FOLDER VALUES('ff8080823f2db2a8013f2db66b0f0002','JUNIT FOLDER',NULL)
-INSERT INTO FOLDER VALUES('ff8080823f2db2a8013f2db66b130003','JUNIT SUBFOLDER','ff8080823f2db2a8013f2db66b0f0002')
+INSERT INTO FOLDER VALUES('ff8080824b4ebd51014b4eca87ad0004','PARENT',NULL)
+INSERT INTO FOLDER VALUES('ff8080824b4ebd51014b4ecad2cd0005','CHILD','ff8080824b4ebd51014b4eca87ad0004')
 INSERT INTO TPOSITION VALUES('ff80808245dbaf5e0145dce7f9b00037',1234.1234130859375E0,1234567.1234567E0,'JUNIT POSITION')
 INSERT INTO CHECK VALUES('ff80808240b9de020140b9df76760001','THE CHECK')
 INSERT INTO CHECKTRANSACTION VALUES('ff80808240b9de020140b9df1ffe0000','THE CHECK TRANSACTION','ff80808240b9de020140b9df76760001')
